--- a/querries.css
+++ b/querries.css
@@ -2,11 +2,29 @@
   body {
     background-image: url(background.jpg);
   }
+  .contact-details {
+    padding: 0 3px 0 3px !important;
+  }
+  .contact-icon {
+    font-size: 1.4rem !important;
+  }
+  .fa-brands {
+    font-size: 1.4rem !important;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
   body {
     background-image: url(background.jpg);
+  }
+  .contact-details {
+    padding: 0 5px 0 5px !important;
+  }
+  .contact-icon {
+    font-size: 1.6rem !important;
+  }
+  .fa-brands {
+    font-size: 1.6rem !important;
   }
 }
 
@@ -14,4 +32,4 @@
   body {
     background-image: url(background.jpg);
   }
-}
+
