--- a/querries.css
+++ b/querries.css
@@ -3,7 +3,7 @@
     background-image: url(background.jpg);
   }
   .contact-details {
-    padding: 0 3px 0 3px !important;
+    padding: 20px 6px 20px 6px !important;
   }
   .contact-icon {
     font-size: 1.4rem !important;
@@ -18,7 +18,7 @@
     background-image: url(background.jpg);
   }
   .contact-details {
-    padding: 0 5px 0 5px !important;
+    padding: 20px 8px 20px 8px !important;
   }
   .contact-icon {
     font-size: 1.6rem !important;
