--- a/css.css
+++ b/css.css
@@ -9,6 +9,18 @@ body {
   text-align: center;
 }
 
+.btn-success {
+  border: none !important;
+}
+
+.btn-success:hover {
+  background-color: #df1b14 !important;
+}
+
+.btn-success:visited {
+  background-color: #1f1f1f;
+}
+
 .section {
   background-color: rgba(100, 130, 189, 0.441);
   margin: 0 10%;
@@ -17,12 +29,54 @@ body {
   font-size: 110%;
 }
 
+.container {
+  height: 100vw;
+}
+
 #cap {
   color: rgb(0, 0, 0);
   text-align: center;
   font-size: 20px;
   margin: 10px 0 10px 0;
   font-weight: bold;
+}
+
+/* Dropdown */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(22, 20, 20);
+  min-width: 140px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: rgb(165, 151, 151);
+  padding: 3px 6px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
 
 .contact-section {
