--- a/css.css
+++ b/css.css
@@ -75,9 +75,9 @@ body {
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-}
+/* .dropdown:hover .dropbtn {
+  background-color: ;
+} */
 
 .contact-section {
   display: flex;
