--- a/querries.css
+++ b/querries.css
@@ -11,6 +11,9 @@
   .fa-brands {
     font-size: 1.4rem !important;
   }
+  .container {
+    height: 100vw;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
@@ -25,6 +28,9 @@
   }
   .fa-brands {
     font-size: 1.6rem !important;
+  }
+  .container {
+    height: 100vw;
   }
 }
 
