--- a/querries.css
+++ b/querries.css
@@ -12,7 +12,7 @@
     font-size: 1.4rem !important;
   }
   .container {
-    height: 100vw;
+    width: 100%;
   }
 }
 
@@ -30,7 +30,7 @@
     font-size: 1.6rem !important;
   }
   .container {
-    height: 100vw;
+    width: 100%;
   }
 }
 
