--- a/querries.css
+++ b/querries.css
@@ -12,7 +12,7 @@
     font-size: 1.4rem !important;
   }
   .container {
-    width: 100%;
+    height: 100vh;
   }
 }
 
@@ -30,7 +30,7 @@
     font-size: 1.6rem !important;
   }
   .container {
-    width: 100%;
+    height: 100vh;
   }
 }
 
